[package]
name = "sled_pg"
version = "0.1.0"
authors = ["y"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.30.3"
raft = "0.5.0" 
log = "0.4.8"
env_logger = "0.7.1"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
protobuf = "2.0.6"
regex = "1.3.1"
actix-raft = "0.4.2"
tonic = "0.1.0-beta.1"
bytes = "0.4.12"
prost = "0.5.0"

# Required for wellknown types
prost-types = "0.5"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = "0.3" 

# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6"

# Tracing
tracing = "0.1.11"
#tracing-subscriber = { version = "0.2.0-alpha.2", features = ["tracing-log"] }
tracing-subscriber =  { version = "0.1.5", features = ["tracing-log"] }
tracing-attributes = "0.1.5"
tracing-futures = "0.1.1"

[build-dependencies]
tonic-build = "0.1.0-beta.1"

# Echo
[[bin]] # Bin to run the Echo gRPC server
name = "echo-server"
path = "src/echo/server.rs"

[[bin]] # Bin to run the Echo gRPC client
name = "echo-client"
path = "src/echo/client.rs"

# Fulcrum
[[bin]] # Bin to run the Fulcrum Cdn gRPC server
name = "cdn-server"
path = "src/fulcrum/server.rs"
